@@ -39,5 +39,5 @@ FileDaemon {                          # this is me
 # Send all messages except skipped files back to Director
 Messages {
   Name = Standard
-  director = @hostname@-dir = all, !skipped
+  director = @hostname@-dir = all, !skipped, !restored
 }
